--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -14,7 +14,14 @@
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.inputsystem": "1.14.1",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.multiplayer.center.quickstart": "1.0.1",
+    "com.unity.multiplayer.playmode": "1.6.0",
+    "com.unity.multiplayer.tools": "2.2.6",
+    "com.unity.multiplayer.widgets": "1.0.1",
+    "com.unity.netcode.gameobjects": "2.4.4",
     "com.unity.render-pipelines.universal": "17.1.0",
+    "com.unity.services.multiplayer": "1.1.6",
+    "com.unity.services.vivox": "16.6.2",
     "com.unity.test-framework": "1.5.1",
     "com.unity.timeline": "1.8.8",
     "com.unity.toolchain.linux-x86_64": "2.0.10",
