--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,14 @@
 {
   "dependencies": {
     "com.h8man.2d.navmeshplus": "https://github.com/h8man/NavMeshPlus.git",
-    "com.unity.2d.animation": "11.0.0",
-    "com.unity.2d.aseprite": "1.2.5",
-    "com.unity.2d.psdimporter": "10.1.1",
+    "com.unity.2d.animation": "12.0.2",
+    "com.unity.2d.aseprite": "2.0.1",
+    "com.unity.2d.psdimporter": "11.0.1",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "11.0.0",
+    "com.unity.2d.spriteshape": "12.0.1",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.2d.tilemap.extras": "4.3.1",
-    "com.unity.ai.navigation": "2.0.8",
+    "com.unity.2d.tilemap.extras": "5.0.1",
+    "com.unity.ai.navigation": "2.0.9",
     "com.unity.cinemachine": "3.1.4",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.ide.rider": "3.0.36",
@@ -19,8 +19,9 @@
     "com.unity.multiplayer.playmode": "1.6.0",
     "com.unity.multiplayer.tools": "2.2.6",
     "com.unity.multiplayer.widgets": "1.0.1",
-    "com.unity.netcode.gameobjects": "2.4.4",
-    "com.unity.render-pipelines.universal": "17.1.0",
+    "com.unity.netcode.gameobjects": "2.5.0",
+    "com.unity.render-pipelines.universal": "17.2.0",
+    "com.unity.services.analytics": "6.1.0",
     "com.unity.services.multiplayer": "1.1.6",
     "com.unity.test-framework": "1.5.1",
     "com.unity.timeline": "1.8.9",
