--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,31 +1,32 @@
 {
   "dependencies": {
     "com.h8man.2d.navmeshplus": "https://github.com/h8man/NavMeshPlus.git",
-    "com.unity.2d.animation": "12.0.2",
+    "com.unity.2d.animation": "12.0.3",
     "com.unity.2d.aseprite": "2.0.2",
     "com.unity.2d.enhancers": "1.0.0",
     "com.unity.2d.pixel-perfect": "5.1.1",
-    "com.unity.2d.psdimporter": "11.0.1",
+    "com.unity.2d.psdimporter": "11.0.2",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "12.0.1",
+    "com.unity.2d.spriteshape": "12.0.2",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.2d.tilemap.extras": "5.0.1",
+    "com.unity.2d.tilemap.extras": "5.0.2",
     "com.unity.ai.assistant": "1.0.0-pre.12",
     "com.unity.ai.generators": "1.0.0-pre.20",
     "com.unity.ai.inference": "2.3.0",
     "com.unity.ai.navigation": "2.0.9",
-    "com.unity.cinemachine": "3.1.4",
+    "com.unity.cinemachine": "3.1.5",
     "com.unity.collab-proxy": "2.9.3",
     "com.unity.ide.rider": "3.0.38",
-    "com.unity.ide.visualstudio": "2.0.23",
+    "com.unity.ide.visualstudio": "2.0.25",
     "com.unity.inputsystem": "1.14.2",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.multiplayer.center.quickstart": "1.0.1",
-    "com.unity.multiplayer.playmode": "1.6.1",
+    "com.unity.multiplayer.playmode": "1.6.2",
     "com.unity.multiplayer.tools": "2.2.6",
-    "com.unity.multiplayer.widgets": "1.0.1",
-    "com.unity.netcode.gameobjects": "2.5.1",
+    "com.unity.multiplayer.widgets": "1.0.5",
+    "com.unity.netcode.gameobjects": "2.7.0",
     "com.unity.project-auditor": "1.0.2",
+    "com.unity.recorder": "5.1.3",
     "com.unity.render-pipelines.universal": "17.2.0",
     "com.unity.services.analytics": "6.1.1",
     "com.unity.services.multiplayer": "1.1.8",
@@ -33,7 +34,7 @@
     "com.unity.timeline": "1.8.9",
     "com.unity.toolchain.linux-x86_64": "2.0.11",
     "com.unity.ugui": "2.0.0",
-    "com.unity.visualscripting": "1.9.8",
+    "com.unity.visualscripting": "1.9.9",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
