--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,19 @@ crashlytics-build.properties
 
 .fake
 Assets/_Recovery/
+
+thrrfzh.adoc
+
+Jimpu_BurstDebugInformation_DoNotShip/
+
+JimpuWindowsBuild Intel64/
+
+JimpuWindowsBuild Intel64 Linux_Data/
+
+JimpuLinuxBuild Intel64 Linux.x86_64
+
+JimpuWindowsBuild Intel64 Linux_s.debug
+
+libdecor-0.so.0
+
+libdecor-cairo.so
