--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,42 +1,42 @@
 {
   "dependencies": {
     "com.h8man.2d.navmeshplus": "https://github.com/h8man/NavMeshPlus.git",
-    "com.unity.2d.animation": "12.0.3",
-    "com.unity.2d.aseprite": "2.0.2",
+    "com.unity.2d.animation": "13.0.2",
+    "com.unity.2d.aseprite": "3.0.1",
     "com.unity.2d.enhancers": "1.0.0",
     "com.unity.2d.pixel-perfect": "5.1.1",
-    "com.unity.2d.psdimporter": "11.0.2",
+    "com.unity.2d.psdimporter": "12.0.1",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "12.0.2",
+    "com.unity.2d.spriteshape": "13.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.2d.tilemap.extras": "5.0.2",
+    "com.unity.2d.tilemap.extras": "6.0.1",
     "com.unity.ai.assistant": "1.0.0-pre.12",
     "com.unity.ai.generators": "1.0.0-pre.20",
-    "com.unity.ai.inference": "2.3.0",
+    "com.unity.ai.inference": "2.4.1",
     "com.unity.ai.navigation": "2.0.9",
     "com.unity.cinemachine": "3.1.5",
-    "com.unity.collab-proxy": "2.9.3",
+    "com.unity.collab-proxy": "2.10.2",
     "com.unity.ide.rider": "3.0.38",
     "com.unity.ide.visualstudio": "2.0.25",
-    "com.unity.inputsystem": "1.14.2",
+    "com.unity.inputsystem": "1.17.0",
     "com.unity.localization": "1.5.9",
-    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.multiplayer.center": "1.0.1",
     "com.unity.multiplayer.center.quickstart": "1.0.1",
-    "com.unity.multiplayer.playmode": "1.6.2",
+    "com.unity.multiplayer.playmode": "2.0.1",
     "com.unity.multiplayer.tools": "2.2.6",
     "com.unity.multiplayer.widgets": "1.0.5",
     "com.unity.netcode.gameobjects": "2.7.0",
     "com.unity.project-auditor": "1.0.2",
     "com.unity.recorder": "5.1.3",
-    "com.unity.render-pipelines.universal": "17.2.0",
-    "com.unity.services.analytics": "6.1.1",
-    "com.unity.services.multiplayer": "1.1.8",
+    "com.unity.render-pipelines.universal": "17.3.0",
+    "com.unity.services.analytics": "6.2.0",
+    "com.unity.services.multiplayer": "2.0.0",
     "com.unity.test-framework": "1.6.0",
     "com.unity.timeline": "1.8.9",
-    "com.unity.toolchain.linux-x86_64": "2.0.11",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.9",
     "com.unity.modules.accessibility": "1.0.0",
+    "com.unity.modules.adaptiveperformance": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -63,6 +63,7 @@
     "com.unity.modules.unitywebrequestaudio": "1.0.0",
     "com.unity.modules.unitywebrequesttexture": "1.0.0",
     "com.unity.modules.unitywebrequestwww": "1.0.0",
+    "com.unity.modules.vectorgraphics": "1.0.0",
     "com.unity.modules.vehicles": "1.0.0",
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
